# asktherepo

./: .gitignore  .pre-commit-config.yaml  NOTICE  PROGRESS.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/adr/: 0001-vector-storage.md  0002-orchestration.md  0003-multi-tenancy.md  0004-provider-agnostic-llm-and-embeddings.md  0005-queue-and-events.md  0006-license.md
infra/docker/: Dockerfile.core  Dockerfile.service
libs/core/: pyproject.toml
libs/core/asktherepo_core/db/: base.py  models.py
libs/core/tests/: test_version.py
migrations/: env.py
migrations/versions/: 344f917eeec3_initial_schema.py  f36fa9caac33_restricted_app_role_for_rls_enforcement.py
services/dashboard/: pyproject.toml
services/dashboard/dashboard_app/: main.py
services/dashboard/tests/: test_health.py
services/embedding/: pyproject.toml
services/embedding/embedding_app/: main.py
services/embedding/tests/: test_health.py
services/ingestion/: pyproject.toml
services/ingestion/ingestion_app/: main.py
services/ingestion/tests/: test_health.py
services/query/: pyproject.toml
services/query/query_app/: main.py
services/query/tests/: test_health.py
