[project]
name = "asktherepo-core"
version = "0.1.0"
description = "Shared schema models, provider interfaces, and orchestrator for AskTheRepo"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.30",
    "pgvector>=0.3",
    "psycopg[binary]>=3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["asktherepo_core"]
