[project]
name = "asktherepo-dashboard"
version = "0.1.0"
description = "Dashboard: FastAPI + Jinja2/HTMX web UI for managing sources, asking questions, and viewing pipeline traces"
requires-python = ">=3.12"
dependencies = [
    "asktherepo-core",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
]

[tool.uv.sources]
asktherepo-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dashboard_app"]
