[project]
name = "asktherepo-embedding"
version = "0.1.0"
description = "Local embedding service: serves a self-hosted sentence-transformers model, keeping ingestion cost-free per token"
requires-python = ">=3.12"
dependencies = [
    "asktherepo-core",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[tool.uv.sources]
asktherepo-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["embedding_app"]
