[project]
name = "asktherepo-ingestion"
version = "0.1.0"
description = "Ingestion service: pulls source content (starting with GitHub repos), chunks it, and hands it off for embedding"
requires-python = ">=3.12"
dependencies = [
    "asktherepo-core",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "redis>=5.2",
    "celery>=5.4",
]

[tool.uv.sources]
asktherepo-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ingestion_app"]
