[project]
name = "asktherepo-query"
version = "0.1.0"
description = "Query service: runs the Planner/Retriever/Synthesizer/Critic pipeline against ingested content"
requires-python = ">=3.12"
dependencies = [
    "asktherepo-core",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[tool.uv.sources]
asktherepo-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["query_app"]
